Desarrollo de la tarea de busqueda general en vortal

--- a/cetus-vortal-war/src/Message_es.properties
+++ b/cetus-vortal-war/src/Message_es.properties
@@ -55,13 +55,23 @@ error_value_number = El valor debe ser num\u00E9rico
 error_value_money = El valor debe tener formato moneda
 error_value_boolean = El valor debe tener formato boleano
 error_reload_parameter = Error recargando los parametros del componente
-
+ERROR_NO_EXISTS_FILTER = No existe ning\u00FAn filtro configurado
 #F
 father_menu = Padre
 field_requiered = El Campo es Obligatorio
 functionalities = Funcionalidades
 filter_datatable = 5,10,20,50
 filter = Filtro
+filter1 = Filtro 1
+filter2 = Filtro 2
+filter3 = Filtro 3
+filter4 = Filtro 4
+filter5 = Filtro 5
+filter6 = Filtro 6
+filter7 = Filtro 7
+filter8 = Filtro 8
+filter9 = Filtro 9
+filter10 = Filtro 10
 #G
 #H
 high = Alto
@@ -90,6 +100,7 @@ lbl_weak= D\u00E9bil
 LABEL_ONE_MENU_EMPTY = - Seleccione un Men\u00FA -
 logo = Logo
 low = Bajo
+list_filter = Lista de Filtros
 #M
 means = Medio
 manage_menu = Gestionar Men\u00FA
@@ -119,6 +130,8 @@ not_empty = No Existen Registro para mostrar
 name_required = El Campo Nombre es Obligatorio
 no_configured_component = No existe componente configurado
 #O
+option_search = Opci\u00F3n de B\u00FAsqueda
+
 #P
 page_init_session = .:CETUS Vortal:.
 password=Contrase\u00F1a
@@ -165,9 +178,9 @@ service = Servicio
 select_register_component = -- Seleccione un Componente --
 SELECTED_PARAMETER = Debe Seleccionar un Parametro
 SELECTED_COMPONENT_RELOAD = Debe Seleccionar un Componente
-
+selected = -- Seleccione --
 succesfull_component_reload = Recarga de parametros exitosa
-servlet = servlet
+servlet = Servlet
 select_servlet = -- Seleccione Servlet --
 #T
 title_application = .\: Portal CETUS \:.  
