Desarrollo de la tarea de busqueda general en vortal

--- a/cetus-vortal-war/src/Message_es.properties
+++ b/cetus-vortal-war/src/Message_es.properties
@@ -7,6 +7,7 @@ add_all = Agregar Todos
 app = Aplicaci\u00F3n
 address = Direcci\u00F3n de Residencia
 active = Activo
+audit = Auditor\u00EDa
 #B
 btn_search = Buscar 
 btn_clean = Limpiar
@@ -75,6 +76,7 @@ filter10 = Filtro 10
 #G
 #H
 high = Alto
+header_select_row=Seleccionar Registro
 #I
 invalid_captcha = El Valor no coincide con la Imagen.
 init_session=Iniciar Sesi\u00F3n
@@ -257,6 +259,9 @@ url_servlet_view = /pages/admin_portal/servlet/view.xhtml
 url_servlet_add = /pages/admin_portal/servlet/add.xhtml
 
 url_reload = /pages/admin_portal/reload_parameter/reload.xhtml
+
+update_register = Actualizar Registro
+
 #V
 view = Ver Detalle
 value = Valor
