Actualizando version de primefaces en vortal

--- a/cetus-vortal-war/src/Message_es.properties
+++ b/cetus-vortal-war/src/Message_es.properties
@@ -24,6 +24,7 @@ color = Color del Banner
 color_required = El Color RGB es Obligatorio
 component = Componente
 confirm_reload_parameter = \u00BF Esta seguro de Recargar los parametros del componente seleccionado ?
+close = Cerrar
 #D
 delete = Eliminar
 delete_register = Eliminar Registro Seleccionado
@@ -63,17 +64,19 @@ field_requiered = El Campo es Obligatorio
 functionalities = Funcionalidades
 filter_datatable = 5,10,20,50
 filter = Filtro
-filter1 = Filtro 1
-filter2 = Filtro 2
-filter3 = Filtro 3
-filter4 = Filtro 4
-filter5 = Filtro 5
-filter6 = Filtro 6
-filter7 = Filtro 7
-filter8 = Filtro 8
-filter9 = Filtro 9
-filter10 = Filtro 10
+filter1 = Etiqueta Filtro 1
+filter2 = Etiqueta Filtro 2
+filter3 = Etiqueta Filtro 3
+filter4 = Etiqueta Filtro 4
+filter5 = Etiqueta Filtro 5
+filter6 = Etiqueta Filtro 6
+filter7 = Etiqueta Filtro 7
+filter8 = Etiqueta Filtro 8
+filter9 = Etiqueta Filtro 9
+filter10 = Etiqueta Filtro 10
 #G
+general_search = B\u00FAsqueda General 
+
 #H
 high = Alto
 header_select_row=Seleccionar Registro
@@ -103,6 +106,7 @@ LABEL_ONE_MENU_EMPTY = - Seleccione un Men\u00FA -
 logo = Logo
 low = Bajo
 list_filter = Lista de Filtros
+label_filters = Etiquetas de filtros de b\u00FAsqueda visuales en pantalla 
 #M
 means = Medio
 manage_menu = Gestionar Men\u00FA
@@ -131,9 +135,10 @@ no = No
 not_empty = No Existen Registro para mostrar
 name_required = El Campo Nombre es Obligatorio
 no_configured_component = No existe componente configurado
+name_search = Nombre de B\u00FAsqueda
 #O
 option_search = Opci\u00F3n de B\u00FAsqueda
-
+open = Abrir
 #P
 page_init_session = .:CETUS Vortal:.
 password=Contrase\u00F1a
@@ -154,6 +159,7 @@ remove_all = Eliminar Todos
 rol = Rol
 rows = 15
 reload_parameter = Recargar Parametros
+resize = Cambiar Tama\u00F1o
 #S
 sent=Enviar
 succesfull_insert = Se agrego de manera Exitosa el nuevo Registro
